--- a/react-playground/demo-app/src/styles.css
+++ b/react-playground/demo-app/src/styles.css
@@ -4,4 +4,19 @@
     height: 3em;
     border-radius: 8px;
     box-shadow: 4px 4px grey;
+    line-height: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.app-background {
+    padding: 10px;
+}
+
+.app-content {
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    min-height: 300px;
+    padding: 10px;
 }
