--- a/react-playground/demo-app/src/styles.css
+++ b/react-playground/demo-app/src/styles.css
@@ -20,3 +20,9 @@
     min-height: 300px;
     padding: 10px;
 }
+
+.component-paper {
+    margin: 10px;
+    padding: 15px;
+    min-height: 300px;
+}
