--- a/react-playground/home-automation/src/styles/app-styles.css
+++ b/react-playground/home-automation/src/styles/app-styles.css
@@ -1,3 +1,7 @@
+.main-content {
+  background-color: #d5d5e7 !important;
+}
+
 .header-main {
   flex-grow: 1;
   background-color: rgb(117, 141, 206);
@@ -27,9 +31,14 @@
   padding-top: 10px;
 }
 
-.component-paper {
-  background-color: #d5d5e7 !important;
+.component-paper {  
   margin: 20px;
   padding: 15px;
   min-height: 300px;
+}
+
+.tiled-paper {
+  flex-grow: 1 !important;
+  padding: 3px;
+  margin: 5px;
 }
