Updated device settings

--- a/react-playground/home-automation/src/styles/app-styles.css
+++ b/react-playground/home-automation/src/styles/app-styles.css
@@ -39,6 +39,7 @@
 
 .tiled-paper {
   flex-grow: 1 !important;
+  background-color: rgb(117, 141, 206) !important;
   padding: 3px;
   margin: 5px;
 }
